@@ -86,6 +86,8 @@ SQLObject 0.9.4
 * Prevent MultipleJoin from removing the intermediate table if it was not
   created by the Join.
 
+* Fixed a bug with no default when defaultSQL is defined for the column.
+
 SQLObject 0.9.3
 ===============
 
